# cue-designer

./: .gitignore  AGENTS.md  README.md  UV_STARTUP.md  db.sqlite3  main.py  manage.py  pyproject.toml  setup.py  start.ps1  start.sh
backend/: db.sqlite3  pyproject.toml
backend/cue_designer/: settings.py  urls.py  wsgi.py
backend/cues/: admin.py  models.py  urls.py
backend/cues/api/: serializers.py  views.py
backend/cues/geometry/: core.py  operations.py  validators.py
backend/cues/migrations/: 0001_initial.py  0002_cuedesign_shaft_diameter_mm_and_more.py
backend/cues/rendering/: svg_generator.py
cue_designer/: settings.py
cues/: apps.py  models.py  services.py  tests.py
cues/api/: serializers.py  urls.py
cues/geometry/: validators.py
cues/rendering/: coordinate_transform.py
docs/: dataset.json
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/cue-design/: CueEditor.tsx  CueEditorWrapper.tsx  GeometryCanvas.tsx
frontend/src/hooks/: useCueDesigns.ts
frontend/src/pages/: CueList.tsx
frontend/src/services/: api.ts  cues.ts
frontend/src/stores/: cueStore.ts
frontend/src/types/: cue.ts
frontend/src/utils/: export.ts
tests/: test_cues.py
